refatoramento nas funcionalidades de software