@@ -30,7 +30,7 @@
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
-		</dependency>		
+		</dependency>
 		<!-- JSF end -->
 
 		<!-- Weld start -->
@@ -48,12 +48,12 @@
 		</dependency>
 		<!-- JUnit end -->
 
-		<!-- Log4J start -->
+		<!-- slf4j start -->
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
-		<!-- Log4J end -->
+		<!-- slf4j end -->
 
 		<!-- QR Code start -->
 		<dependency>
@@ -74,7 +74,18 @@
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>home</artifactId>
+		</dependency>
 		<!-- Primefaces end -->
+
+		<!-- Omnifaces start -->
+		<dependency>
+			<groupId>org.omnifaces</groupId>
+			<artifactId>omnifaces</artifactId>
+		</dependency>
+		<!-- Omnifaces end -->
 
 		<!-- aid.core begin -->
 		<dependency>
@@ -86,8 +97,20 @@
 	</dependencies>
 
 	<build>
-		<finalName>aid.admin</finalName>
 		<plugins>
+			<!-- <plugin> -->
+			<!-- <groupId>org.apache.tomcat.maven</groupId> -->
+			<!-- <artifactId>tomcat7-maven-plugin</artifactId> -->
+			<!-- <version>2.2</version> -->
+			<!-- <configuration> -->
+			<!-- <path>/aid.admin</path> -->
+			<!-- <port>9090</port> -->
+			<!-- <contextReloadable>true</contextReloadable> -->
+			<!-- <systemProperties> -->
+			<!-- <JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS> -->
+			<!-- </systemProperties> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
